--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: Run Bandit
         run: bandit -r . -f json -o bandit-output.json
+        continue-on-error: true
 
       - name: Upload Bandit Report
         uses: actions/upload-artifact@v4
