--- a/workflows/bandit-analysis.yml
+++ b/workflows/bandit-analysis.yml
@@ -1,25 +1,37 @@
-name: Bandit SAST Analysis
+name: Bandit Security Analysis
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  bandit:
+  security:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'  
 
-      - name: Install Bandit
-        run: pip install bandit
+    - name: Install Bandit
+      run: pip install bandit
 
-      - name: Run Bandit
-        run: bandit -r . -f json -o bandit-output.json
+    - name: Run Bandit Security Scan (HTML and JSON)
+      run: |
+        mkdir -p bandit-reports
+        bandit -r . -f html -o bandit-reports/bandit-report.html || echo "Bandit HTML scan completed with findings."
+        bandit -r . -f json -o bandit-reports/bandit-report.json || echo "Bandit JSON scan completed with findings."
 
-      - name: Upload Bandit Report
-        uses: actions/upload-artifact@v2
-        with:
-          name: bandit-report
-          path: bandit-output.json
+    - name: Upload Bandit Reports
+      uses: actions/upload-artifact@v3
+      with:
+        name: bandit-reports
+        path: bandit-reports/
